# QSnapCraft

./: CMakeLists.txt  README.md
resources/: QSnapCraft.rc  resources.qrc
resources/iconfont/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
src/: main.cpp  mainwindow.cpp  mainwindow.h  mousehook.cpp  mousehook.h  screencapture.cpp  screencapture.h  uiautomation.cpp  uiautomation.h  uiinspector.cpp  uiinspector.h
src/core/: CMakeLists.txt  windowmanager.cpp  windowmanager.h
src/core/editor/: colorpick.cpp  colorpick.h  editor_window.cpp  editor_window.h  editorwindow.cpp  editorwindow.h  toolbar.cpp  toolbar.h
src/core/editor/shapes/: arrow.cpp  arrow.h  ellipse.cpp  ellipse.h  eraser.cpp  eraser.h  freehand.cpp  freehand.h  highlighter.cpp  highlighter.h  mosaic.cpp  mosaic.h  polyline.cpp  polyline.h  rectangle.cpp  rectangle.h  shape.h  text.cpp  text.h
src/core/pinboard/: pin_window.h  pinwindow.cpp  pinwindow.h
src/core/screenshot/: CMakeLists.txt  magnifier.h  screenshot_window.cpp  screenshot_window.h  screenshotwindow.cpp  screenshotwindow.h
src/hooks/: CMakeLists.txt  hooks.cpp  hooks.h
src/settings/: about.ui  aboutsettings.cpp  aboutsettings.h  control.ui  controlsettings.cpp  controlsettings.h  general.ui  generalsettings.cpp  generalsettings.h  globalconfig.cpp  globalconfig.h  output.ui  outputsettings.cpp  outputsettings.h  screenshot.ui  screenshotsettings.cpp  screenshotsettings.h  settingsdata.h  settingswindow.cpp  settingswindow.h  settingswindow.ui
src/utils/: FontManager.cpp  SingleApplication.cpp  SingleApplication.h  magnifier.cpp  magnifier.h  mousehook.cpp  mousehook.h  shortcut_manager.cpp  shortcut_manager.h  shortcutmanager.cpp  shortcutmanager.h  singleapplication.cpp  singleapplication.h  system_tray.cpp  system_tray.h  systemtray.cpp  systemtray.h  systemutils.cpp  systemutils.h  uiinspector.cpp  uiinspector.h
src/widgets/: qhotkeylineedit.cpp  qhotkeylineedit.h
